--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "MDN search API for Javascript",
   "author": "SUVAJIT (suvajit.me@gmail.com)",
   "license": "MIT",
-  "main": "index.js",
+  "main": "src/index.js",
   "private": true,
   "scripts": {
     "test": "eslint --ext .js --ignore-path .gitignore .",
     "lint": "eslint --fix --ext .js --ignore-path .gitignore .",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
