--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "extends": "mars/node",
     "rules": {
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "no-unused-vars": "off"
     }
 }
